# pharia-kernel-sdk-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  release-plz.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml  security.yml
examples/hello-world/: CHANGELOG.md  Cargo.toml
examples/hello-world/src/: lib.rs
pharia-skill/: CHANGELOG.md  Cargo.toml
pharia-skill-macros/: CHANGELOG.md  Cargo.toml
pharia-skill-macros/src/: lib.rs
pharia-skill-test/: CHANGELOG.md  Cargo.toml
pharia-skill-test/src/: lib.rs
pharia-skill-test/tests/: default_output.rs  results.rs  serializable_io.rs
pharia-skill/src/: bindings.rs  chat.rs  csi.rs  lib.rs  prompt.rs
pharia-skill/src/bindings/: chunking.rs  document_index.rs  inference.rs  language.rs
pharia-skill/src/csi/: chunking.rs  document_index.rs  inference.rs  language.rs
pharia-skill/src/wit/: world.wit
pharia-skill/tests/: default_output.rs  results.rs  serializable_io.rs
