[workspace]
members = [
    "examples/*",
    "pharia-skill",
    "pharia-skill-macros",
    "pharia-skill-test",
]
resolver = "2"

[workspace.package]
authors = [
    "Markus Klein <markus.klein@aleph-alpha.com>",
    "Ben Brandt <benjamin.brandt@aleph-alpha.com>",
    "Moritz Althaus <moritz.althaus@aleph-alpha.com>",
    "Jia Ho Lee <jiaho.lee@aleph-alpha.com>",
    "Daniel Tscherwinka <daniel.tscherwinka@aleph-alpha.com>",
    "Peter Barth <peter.barth@aleph-alpha.com>",
]
edition = "2021"
repository = "https://github.com/Aleph-Alpha/pharia-kernel-sdk-rs"
readme = "README.md"
categories = ["API bindings"]
keywords = ["ai", "llm", "skill"]
# If you update this, make sure to also update the versions of the local crates as well.
version = "0.1.0"

[workspace.dependencies]
# Update these versions as well when updating the workspace version
pharia-skill = { version = "0.1.0", path = "./pharia-skill" }
pharia-skill-macros = { version = "0.1.0", path = "./pharia-skill-macros" }
pharia-skill-test = { version = "0.1.0", path = "./pharia-skill-test" }

anyhow = "1.0.72"
dotenvy = "0.15.7"
quote = "1.0.35"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.97"
syn = { version = "2.0.79", features = ["full"] }
ureq = { version = "2.10.1", features = ["json"] }
wit-bindgen = "0.32.0"

[workspace.lints.rust]
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
refining-impl-trait = "warn"
rust-2018-idioms = "warn"
rust-2024-compatibility = "warn"
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module-name-repetitions = "allow"
