[package]
name = "pharia-skill-test"
description = "Test helpers for testing Pharia Kernel skill components locally."
version.workspace = true
rust-version = "1.82.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
pharia-skill.workspace = true
serde.workspace = true
ureq.workspace = true

[lints]
workspace = true

[dev-dependencies]
anyhow.workspace = true
dotenvy.workspace = true
