[package]
name = "pharia-skill-test"
description = "Test helpers for testing Pharia Kernel skill components locally."
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
pharia-skill.workspace = true
serde.workspace = true
ureq.workspace = true

[lints]
workspace = true

[dev-dependencies]
anyhow.workspace = true
dotenvy.workspace = true
jiff.workspace = true
jsonschema.workspace = true
schemars.workspace = true
