[package]
name = "pharia-skill"
description = "SDK for building Skills that run within Pharia Kernel."
version.workspace = true
rust-version = "1.82.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
pharia-skill-macros.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
wit-bindgen.workspace = true

[lints]
workspace = true
