[package]
name = "pharia-skill"
description = "SDK for building Skills that run within Pharia Kernel."
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
jiff.workspace = true
pharia-skill-macros.workspace = true
schemars.workspace = true
serde.workspace = true
serde-bool.workspace = true
serde_json.workspace = true
strum.workspace = true
wit-bindgen.workspace = true

[lints]
workspace = true
